fix(page-selector):  Fix page selector colors and add custom scrollbar to it

--- a/src/components/Table/components/Pagination/styles.module.scss
+++ b/src/components/Table/components/Pagination/styles.module.scss
@@ -67,7 +67,6 @@
   line-height: 32px;
   text-align: center;
   border-radius: var(--table-border-radius);
-  background-color: var(--color-background-sunken);
   cursor: pointer;
 }
 
